syntax = "proto3";

package ddex.v1beta1;

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/ddex/v1beta1";

message Release {
  message ReleaseId {
    string grid = 1;
    string icpn = 2;
    string catalogue_number = 3;
    repeated ProprietaryId proprietary_id = 4;
  }

  message ProprietaryId {
    string namespace = 1;
    string id = 2;
  }

  message DisplayTitle {
    string title_text = 1;
  }

  message DisplayArtist {
    string artist_party_reference = 1;
    string display_artist_role = 2;
  }

  message Release {
    message PLine {
      string year = 1;
      string p_line_text = 2;
    }

    message Genre {
      string genre_text = 1;
    }

    message ResourceGroup {
      message ResourceGroup {
        message AdditionalTitle {
          string title_type = 1;
          string title_text = 2;
        }

        message ResourceGroupContentItem {
          string resource_group_content_item_type = 1;
          string resource_group_content_item_text = 2;
        }

        string resource_group_type = 1;
        AdditionalTitle additional_title = 2;
        string sequence_number = 3;
        repeated ResourceGroupContentItem resource_group_content_item = 4;
      }

      repeated ResourceGroup resource_group = 1;
    }

    string release_reference = 1;
    string release_type = 2;
    ReleaseId release_id = 3;
    string display_title_text = 4;
    DisplayTitle display_title = 5;
    string display_artist_name = 6;
    repeated DisplayArtist display_artist = 7;
    string release_label_reference = 8;
    PLine p_line = 9;
    string duration = 10;
    Genre genre = 11;
    string original_release_date = 12;
    string parental_warning_type = 13;
    ResourceGroup resource_group = 14;
  }

  message TrackRelease {
    message Genre {
      string genre_text = 1;
    }

    string release_reference = 1;
    ReleaseId release_id = 2;
    string release_resource_reference = 3;
    string release_label_reference = 4;
    Genre genre = 5;
  }

  oneof release {
    Release main_release = 1;
    TrackRelease track_release = 2;
  }
}
